--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,10 @@ a {
 
 .project img {
   margin-bottom: 0.75rem;
+  border-radius: 12px;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
 }
 
 .tags {
